@@ -1,6 +1,0 @@
-Build
-_build
-Makefile
-META.yml
-README
-Math-BaseCalc-*
