@@ -1,5 +1,8 @@
 Revision history for Perl extension Math::BaseCalc.
 
+ - Moved the repository to SVN hosting at code.google.com instead of
+   CVS on my laptop.
+
 1.12 - Thu Jun 26 16:01:32 2008
 
  - Modernized the layout of the distribution, including a lib/
